fix(heating): fix animation alignment

--- a/src/components/ModularScreen/modular.less
+++ b/src/components/ModularScreen/modular.less
@@ -1,4 +1,4 @@
-@modular-content-offset: 115px;
+@modular-content-offset: 80px;
 @modular-content-padding: 10px;
 
 .modular-screen {
@@ -36,7 +36,7 @@
 
 .modular-footer {
   position: absolute;
-  top: 250px;
+  top: 300px;
   left: 20px;
   bottom: 0;
   right: 20px;
